# usvfs-rs

./: Cargo.toml  LICENSE  build.rs  flake.nix
lib/: usvfs_x64.lib
src/: lib.rs
